// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DashboardCard /> should render correctly when passed an antd icon type 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DashboardCard
    iconType="setting"
    title="Settings"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <DashboardCard.style__AntdIcon
          type="setting"
/>,
        "s",
        <DashboardCard.style__Title>
          Settings
</DashboardCard.style__Title>,
      ],
      "className": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "type": "setting",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "s",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Settings",
        },
        "ref": null,
        "rendered": "Settings",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <DashboardCard.style__AntdIcon
            type="setting"
/>,
          "s",
          <DashboardCard.style__Title>
            Settings
</DashboardCard.style__Title>,
        ],
        "className": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "type": "setting",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "s",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Settings",
          },
          "ref": null,
          "rendered": "Settings",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<DashboardCard /> should render correctly when passed an icon src 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DashboardCard
    iconSrc="\\\\public\\\\images\\\\dex-icon-green.png"
    title="DEX"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <DashboardCard.style__CustomIcon
          src="\\\\public\\\\images\\\\dex-icon-green.png"
/>,
        "s",
        <DashboardCard.style__Title>
          DEX
</DashboardCard.style__Title>,
      ],
      "className": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "src": "\\\\public\\\\images\\\\dex-icon-green.png",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "s",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "DEX",
        },
        "ref": null,
        "rendered": "DEX",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <DashboardCard.style__CustomIcon
            src="\\\\public\\\\images\\\\dex-icon-green.png"
/>,
          "s",
          <DashboardCard.style__Title>
            DEX
</DashboardCard.style__Title>,
        ],
        "className": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "src": "\\\\public\\\\images\\\\dex-icon-green.png",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "s",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "DEX",
          },
          "ref": null,
          "rendered": "DEX",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
